<resources>
    <string name="app_name">EggTimer</string>
    <string name="start">Start</string>
    <string name="select_your_egg">Select your egg!</string>
    <string name="tab_text_1" />
    <string name="tab_text_2" />
    <string name="soft" >soft</string>
    <string name="medium">medium</string>
    <string name="hard">hard</string>
    <string name="stop">Stop</string>
    <string name="TimerZero">00:00</string>

</resources>