<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B2B2B"
    android:padding="30dp"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rowZero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="-9dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rowOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="623dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rowTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="460dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rowFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="492dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rowFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.89" />


    <TextView
        android:id="@+id/actionTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_your_egg"
        android:textColor="#B8B8B8"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/buttonRow"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="425dp"
        android:text="Choose soft, medium or hard"
        android:textColor="#B8B8B8"
        app:layout_constraintBottom_toBottomOf="@+id/buttonRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionTxt"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/buttonRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:weightSum="3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionTxt">

        <ImageButton
            android:id="@+id/softBoiledButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/soft"
            android:onClick="onButtonEggSelectedClicked"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_soft" />

        <ImageButton
            android:id="@+id/mediumBoiledButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/medium"
            android:onClick="onButtonEggSelectedClicked"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_medium" />

        <ImageButton
            android:id="@+id/hardBoiledButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/hard"
            android:onClick="onButtonEggSelectedClicked"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_hard" />
    </LinearLayout>

    <TextView
        android:id="@+id/timerTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TimerZero"
        android:textColor="#B8B8B8"
        android:textSize="80sp"
        app:layout_constraintBottom_toTopOf="@id/startupButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonRow" />

    <Button
        android:id="@+id/startupButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:enabled="false"
        android:text="@string/start"
        android:textColor="#323232"
        android:textSize="20sp"
        app:backgroundTint="#FEDB1F"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>